# Q3-assignment-python

assignment4/bmi_calculator/: main.py
assignment4/hangman/: main.py
assignment4/number-guess-game/: main.py
assignment4/quiz_app/: main.py
assignment4/rock_paper_scissors_game/: main.py
class02_operators/: app.py
class03/: lesson5.py  lesson6.py  lesson7.py
class04/: lesson10.py  lesson11.py  lesson8.py  lesson9.py
data-secure/: pyproject.toml  secure_data.json
library-manager/: library.json  librarymanager.py
password-strength-meter/: main.py
password_strength_meter/: app.py  password_check.py
student mangmnet system/: main.py
study_planner/: app.py  requirements.txt
unit-calculator/: unit_converter.py
unit-converter/: main.py
unit_converter/: main.py  pyproject.toml
